[[project]
name = "python-template"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

dependencies = [
    "discord-py>=2.5.2",
    "flask>=3.1.0",
]

authors = [
    {name = "Your Name", email = "you@example.com"}
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
